--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-mongoengine = "^0.4.6"
 dnspython = "^2.2.0"
 djongo = "^1.3.6"
 pymongo = "3.12.3"
+graphene-django = "2.13.0"
 
 [tool.poetry.dev-dependencies]
 
