--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ dnspython = "^2.2.0"
 djongo = "^1.3.6"
 pymongo = "3.12.3"
 graphene-django = "2.13.0"
+requests = "^2.27.1"
+numpy = "^1.22.3"
+beautifulsoup4 = "^4.10.0"
+pandas = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 
